@@ -299,6 +299,10 @@ platform_capture_setup(platform_camera_t *craw, uint32_t num_dma_buffers,
   int numdcls;
   CFSocketContext socket_context = { 0, craw, NULL, NULL, NULL };
   
+  // if capture is already set, abort
+  if (camera->capture_is_set>0)
+    return DC1394_CAPTURE_IS_RUNNING;
+
   craw->capture.flags=flags;
   if (((flags & DC1394_CAPTURE_FLAGS_CHANNEL_ALLOC) &&
           (flags & DC1394_CAPTURE_FLAGS_BANDWIDTH_ALLOC)) ||
@@ -441,6 +445,7 @@ platform_capture_setup(platform_camera_t *craw, uint32_t num_dma_buffers,
   if (flags & DC1394_CAPTURE_FLAGS_AUTO_ISO) {
     err=dc1394_video_set_transmission(camera, DC1394_ON);
     DC1394_ERR_RTN(err,"Could not start ISO!");
+    camera->iso_auto_started=1;
   }
 
   return DC1394_SUCCESS;
@@ -536,6 +541,14 @@ platform_capture_stop(platform_camera_t *craw)
   capture->frames = NULL;
 
   camera->capture_is_set=0;
+
+  // stop ISO if it was started automatically
+  if (camera->iso_auto_started>0) {
+    err=dc1394_video_set_transmission(camera, DC1394_OFF);
+    DC1394_ERR_RTN(err,"Could not stop ISO!");
+    camera->iso_auto_started=0;
+  }
+
   return DC1394_SUCCESS;
 }
 
